# rust-hoex

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  setup.sh
docs/: 00-basics.md  01-fundamentals.md  02-intermediate.md  03-advanced.md  LEARNING_PATH.md
examples/01-helloWorld/: Cargo.toml  README.md
examples/01-helloWorld/src/: lib.rs  main.rs
examples/01-helloWorld/tests/: integration.rs
examples/02-variables/: Cargo.toml  README.md
examples/02-variables/src/: main.rs
examples/02-variables/tests/: integration.rs
examples/03-dataTypes/: Cargo.toml  README.md
examples/03-dataTypes/src/: lib.rs  main.rs
examples/03-dataTypes/tests/: integration.rs
examples/04-functions/: Cargo.toml  README.md
examples/04-functions/src/: lib.rs  main.rs
examples/04-functions/tests/: integration.rs
examples/05-controlFlow/: Cargo.toml  README.md
examples/05-controlFlow/src/: lib.rs  main.rs
examples/05-controlFlow/tests/: integration.rs
examples/06-ownership/: Cargo.toml  README.md
examples/06-ownership/src/: lib.rs  main.rs
examples/06-ownership/tests/: integration.rs
examples/07-borrowing/: Cargo.toml  README.md
examples/07-borrowing/src/: lib.rs  main.rs
examples/07-borrowing/tests/: integration.rs
examples/08-structs/: Cargo.toml  README.md
examples/08-structs/src/: lib.rs  main.rs
examples/08-structs/tests/: integration.rs
examples/09-enums/: Cargo.toml  README.md
examples/09-enums/src/: lib.rs  main.rs
examples/09-enums/tests/: integration.rs
examples/10-modules/: Cargo.toml  README.md
examples/10-modules/src/: lib.rs  main.rs
examples/10-modules/src/analyzer/: mod.rs  report.rs  score.rs
examples/10-modules/tests/: integration.rs
examples/11-collections/: Cargo.toml  README.md
examples/11-collections/src/: lib.rs  main.rs
examples/11-collections/tests/: integration.rs
examples/12-error-handling/: Cargo.toml  README.md
examples/12-error-handling/src/: lib.rs  main.rs
examples/12-error-handling/tests/: integration.rs
examples/13-generics/: Cargo.toml  README.md
examples/13-generics/src/: lib.rs  main.rs
examples/13-generics/tests/: integration.rs
examples/14-traits/: Cargo.toml  README.md
examples/14-traits/src/: lib.rs  main.rs
examples/14-traits/tests/: integration.rs
examples/15-lifetimes/: Cargo.toml  README.md
examples/15-lifetimes/src/: lib.rs  main.rs
examples/15-lifetimes/tests/: integration.rs
examples/16-testing/: Cargo.toml  README.md
examples/16-testing/src/: lib.rs  main.rs
examples/16-testing/tests/: integration.rs
examples/17-iterators/: Cargo.toml  README.md
examples/17-iterators/src/: lib.rs  main.rs
examples/17-iterators/tests/: integration.rs
examples/18-closures/: Cargo.toml  README.md
examples/18-closures/src/: lib.rs  main.rs
examples/18-closures/tests/: integration.rs
examples/19-smart-pointers/: Cargo.toml  README.md
examples/19-smart-pointers/src/: lib.rs  main.rs
examples/19-smart-pointers/tests/: integration.rs
examples/20-concurrency/: Cargo.toml  README.md
examples/20-concurrency/src/: lib.rs  main.rs
examples/20-concurrency/tests/: integration.rs
examples/21-async/: Cargo.toml  README.md
examples/21-async/src/: lib.rs  main.rs
examples/21-async/tests/: integration.rs
examples/22-macros/: Cargo.toml  README.md
examples/22-macros/src/: lib.rs  main.rs
examples/22-macros/tests/: integration.rs
examples/23-unsafe/: Cargo.toml  README.md
examples/23-unsafe/src/: lib.rs  main.rs
examples/23-unsafe/tests/: integration.rs
exercises/01-helloWorld/: Cargo.toml  README.md
exercises/01-helloWorld/src/: lib.rs  main.rs
exercises/01-helloWorld/tests/: integration.rs
exercises/02-variables/: Cargo.toml  README.md
exercises/02-variables/src/: electromagnetic.rs  lib.rs  main.rs  quantum.rs  temperature.rs
exercises/02-variables/src/utils/: constants.rs  conversions.rs  display.rs  mod.rs
exercises/02-variables/tests/: integration.rs
exercises/03-dataTypes/: Cargo.toml  README.md
exercises/03-dataTypes/src/: lib.rs  main.rs  packet.rs  ports.rs  tos_protocol.rs
exercises/03-dataTypes/tests/: integration.rs
exercises/04-functions/: Cargo.toml  README.md
exercises/04-functions/src/: checksum.rs  checksum_exercise.rs  lib.rs  main.rs  seal_exercise.rs
exercises/04-functions/tests/: integration.rs
exercises/05-controlFlow/: Cargo.toml  README.md
exercises/05-controlFlow/src/: batch.rs  classifier.rs  lib.rs  main.rs  scoring.rs
exercises/05-controlFlow/tests/: integration.rs
exercises/06-ownership/: Cargo.toml  README.md
exercises/06-ownership/src/: lib.rs  main.rs  move_vs_copy.rs  secrets.rs  zeroize.rs
exercises/06-ownership/tests/: integration.rs
exercises/07-borrowing/: Cargo.toml  README.md
exercises/07-borrowing/src/: inspect.rs  lib.rs  main.rs  password.rs  policy.rs
exercises/07-borrowing/tests/: integration.rs
exercises/08-structs/: Cargo.toml  README.md
exercises/08-structs/src/: account.rs  auth_flow.rs  lib.rs  lockout.rs  main.rs  session.rs
exercises/08-structs/tests/: integration.rs
exercises/09-enums/: Cargo.toml  README.md
exercises/09-enums/src/: auth_demo.rs  auth_status.rs  http_status.rs  lib.rs  main.rs  maybe_token.rs  network.rs  network_demo.rs
exercises/09-enums/tests/: integration.rs
exercises/10-modules/: Cargo.toml  README.md
exercises/11-collections/: Cargo.toml  README.md
exercises/12-error-handling/: Cargo.toml  README.md
exercises/13-generics/: Cargo.toml  README.md
exercises/14-traits/: Cargo.toml  README.md
exercises/15-lifetimes/: Cargo.toml  README.md
exercises/16-testing/: Cargo.toml  README.md
exercises/17-iterators/: Cargo.toml  README.md
exercises/18-closures/: Cargo.toml  README.md
exercises/19-smart-pointers/: Cargo.toml  README.md
exercises/20-concurrency/: Cargo.toml  README.md
exercises/21-async/: Cargo.toml  README.md
exercises/22-macros/: Cargo.toml  README.md
exercises/23-unsafe/: Cargo.toml  README.md
projects/cli-tools/: Cargo.toml  README.md
utils/: aliases.sh  check.sh  creator.sh
(+88 files in other folders)
