[workspace]
resolver = "2"
members = [
    "examples/*/",
    "exercises/*/",
    "projects/*/",
]

exclude = [
    "docs",
    "utils",
    "benchmarks",
]

[workspace.package]
authors = ["Daniel SB <dasobral93@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/dasobral/rust-hoex"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json"] }
criterion = "0.5"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
todo = "warn"
unimplemented = "warn"
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
# Learning-friendly allowances for tutorial code
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
