[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Hello World"

[dependencies]
# Add dependencies as needed
# Common ones available in workspace:
# serde = { workspace = true }
# tokio = { workspace = true }
# clap = { workspace = true }
# anyhow = { workspace = true }

[[bin]]
name = "helloworld"
path = "src/main.rs"
