[package]
name = "example_helloworld"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Hello World — first Rust program with println!, format!, and lib vs bin"

[dependencies]

[lib]
name = "example_helloworld"
path = "src/lib.rs"

[[bin]]
name = "example_helloworld"
path = "src/main.rs"

[lints]
workspace = true
