[package]
name = "example_variables"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cryptographic entropy and password strength analysis - demonstrating variables in Rust"

[dependencies]
# No external dependencies — standard library only

[[bin]]
name = "example_variables"
path = "src/main.rs"

[lints]
workspace = true
