[package]
name = "example_datatypes"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Network packet header analyzer — scalar and compound types in Rust"

[dependencies]
# No external dependencies — standard library only

[lib]
name = "example_datatypes"
path = "src/lib.rs"

[[bin]]
name = "example_datatypes"
path = "src/main.rs"

[lints]
workspace = true
