[package]
name = "example_functions"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Network checksum utilities — function syntax in Rust"

[dependencies]
# No external dependencies — standard library only

[lib]
name = "example_functions"
path = "src/lib.rs"

[[bin]]
name = "example_functions"
path = "src/main.rs"

[lints]
workspace = true
