[package]
name = "example_collections"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Collections — Vec, HashMap, and HashSet for intrusion log aggregation"

[dependencies]

[lib]
name = "example_collections"
path = "src/lib.rs"

[[bin]]
name = "example_collections"
path = "src/main.rs"

[lints]
workspace = true
