[package]
name = "example_errorhandling"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Error handling — Option, Result, ? operator, and custom errors for config validation"

[dependencies]
thiserror = { workspace = true }

[lib]
name = "example_errorhandling"
path = "src/lib.rs"

[[bin]]
name = "example_errorhandling"
path = "src/main.rs"

[lints]
workspace = true
