[package]
name = "example_generics"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Generics — type parameters, trait bounds, and a SecureContainer cache"

[dependencies]

[lib]
name = "example_generics"
path = "src/lib.rs"

[[bin]]
name = "example_generics"
path = "src/main.rs"

[lints]
workspace = true
