[package]
name = "example_traits"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Traits — shared ThreatScorer behavior across event types (static dispatch)"

[dependencies]

[lib]
name = "example_traits"
path = "src/lib.rs"

[[bin]]
name = "example_traits"
path = "src/main.rs"

[lints]
workspace = true
