[package]
name = "example_iterators"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Iterator adapters for processing log lines and IPs"

[dependencies]

[lib]
name = "example_iterators"
path = "src/lib.rs"

[[bin]]
name = "example_iterators"
path = "src/main.rs"

[lints]
workspace = true
