[package]
name = "example_concurrency"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Threads and mpsc channels — parallel log-line processing"

[dependencies]

[lib]
name = "example_concurrency"
path = "src/lib.rs"

[[bin]]
name = "example_concurrency"
path = "src/main.rs"

[lints]
workspace = true
