[package]
name = "example_macros"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Declarative macros — say!, testvec!, and hashmap!-style helpers"

[dependencies]

[lib]
name = "example_macros"
path = "src/lib.rs"

[[bin]]
name = "example_macros"
path = "src/main.rs"

[lints]
workspace = true
