[package]
name = "exercise_helloworld"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Hello World exercises — greetings, security banners, and string formatting"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }

[lib]
name = "helloworld_exercises"
path = "src/lib.rs"

[[bin]]
name = "exercise_helloworld"
path = "src/main.rs"

[lints]
workspace = true
