[package]
name = "exercise_controlflow"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Control flow exercises — threat scores and log classification"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }

[lib]
name = "controlflow_exercises"
path = "src/lib.rs"

[[bin]]
name = "exercise_controlflow"
path = "src/main.rs"

[lints]
workspace = true
